a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yu_hua/a.min
var x: int;
var y: string;

x = 10;
y = "haha";

print x + y;
